--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,10 @@ project(Dungeon)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Dungeon main.cpp Game.cpp Game.h Menu/Button.cpp Menu/Button.h Menu/Menu.cpp Menu/Menu.h Options.cpp Options.h Map/Tyle.cpp Map/Tyle.h)
+add_executable(Dungeon main.cpp Game.cpp Game.h Menu/Button.cpp Menu/Button.h Menu/Menu.cpp Menu/Menu.h Options.cpp Options.h Map/Tyle.cpp Map/Tyle.h
+        Menu/StartGameButton.cpp
+        Menu/StartGameButton.h
+        Menu/EditPlayerSkin.cpp
+        Menu/EditPlayerSkin.h
+        Menu/ExitGame.cpp
+        Menu/ExitGame.h)
