pridelani skillu 1.cast

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,4 +42,10 @@ add_executable(Dungeon main.cpp Game.cpp Game.h Menu/Button.cpp Menu/Button.h Me
         Map/Room.cpp
         EnemyObject/Trap/StaticTrap.cpp
         EnemyObject/Trap/StaticTrap.h
-        Enums/PlayerType.cpp Enums/PlayerType.h Enums/FactoryType.cpp Enums/FactoryType.h Map/Map.cpp Map/Map.h)
+        Enums/PlayerType.cpp Enums/PlayerType.h Enums/FactoryType.cpp Enums/FactoryType.h Map/Map.cpp Map/Map.h
+        Menu/InGameMenu/PauseGameMenu.cpp
+        Menu/InGameMenu/PauseGameMenu.h
+        Player/BonusSkills/Skills.cpp
+        Player/BonusSkills/Skills.h
+        Player/BonusSkills/BonusHpSkill.cpp
+        Player/BonusSkills/BonusHpSkill.h)
