--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,4 +42,16 @@ add_executable(Dungeon main.cpp Game.cpp Game.h Menu/Button.cpp Menu/Button.h Me
         Map/Room.cpp
         EnemyObject/Trap/StaticTrap.cpp
         EnemyObject/Trap/StaticTrap.h
-        Enums/PlayerType.cpp Enums/PlayerType.h Enums/FactoryType.cpp Enums/FactoryType.h Map/Map.cpp Map/Map.h)
+        Enums/PlayerType.cpp Enums/PlayerType.h Enums/FactoryType.cpp Enums/FactoryType.h Map/Map.cpp Map/Map.h
+        Items/Inventory.cpp
+        Items/Inventory.h
+        Items/Potion.cpp
+        Items/Potion.h
+        Items/HealthPotion.cpp
+        Items/HealthPotion.h
+        Items/DamagePotion.cpp
+        Items/DamagePotion.h
+        Items/DefencePotion.cpp
+        Items/DefencePotion.h
+        Items/IncreaseHealthPotion.cpp
+        Items/IncreaseHealthPotion.h)
